<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
    
  <groupId>dev.teamnight</groupId>
  <artifactId>NightWeb</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>NightWeb</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <dependencies.dir>${project.basedir}/build/libraries</dependencies.dir>
    <output.dir>${project.basedir}/build</output.dir>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>javax.servlet</groupId>
    	<artifactId>javax.servlet-api</artifactId>
    	<version>3.1.0</version>
    </dependency>
    <dependency>
    	<groupId>org.hibernate</groupId>
    	<artifactId>hibernate-core</artifactId>
    	<version>5.4.14.Final</version>
    </dependency>
    <dependency>
  		<groupId>org.apache.logging.log4j</groupId>
  		<artifactId>log4j-api</artifactId>
  		<version>2.6.2</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.logging.log4j</groupId>
  		<artifactId>log4j-core</artifactId>
  		<version>2.6.2</version>
  	</dependency>
  	<dependency>
  		<groupId>org.eclipse.jetty</groupId>
  		<artifactId>jetty-server</artifactId>
  		<version>9.4.17.v20190418</version>
  	</dependency>
  	<dependency>
  		<groupId>org.eclipse.jetty</groupId>
  		<artifactId>jetty-servlet</artifactId>
  		<version>9.4.19.v20190610</version>
  	</dependency>
  	<dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>28.2-jre</version>
    </dependency>
    <dependency>
    	<groupId>javax.xml.bind</groupId>
    	<artifactId>jaxb-api</artifactId>
    	<version>2.3.1</version>
	</dependency>
	<dependency>
	    <groupId>com.sun.xml.bind</groupId>
	    <artifactId>jaxb-impl</artifactId>
	    <version>2.3.1</version>
	</dependency>
	<dependency>
  		<groupId>mysql</groupId>
  		<artifactId>mysql-connector-java</artifactId>
  		<version>8.0.20</version>
  	</dependency>
  	<dependency>
  		<groupId>javax.persistence</groupId>
  		<artifactId>javax.persistence-api</artifactId>
  		<version>2.2</version>
  	</dependency>
  	<dependency>
	  <groupId>org.freemarker</groupId>
	  <artifactId>freemarker</artifactId>
	  <version>2.3.30</version>
	</dependency>
  	<dependency>
  		<groupId>commons-validator</groupId>
  		<artifactId>commons-validator</artifactId>
  		<version>1.6</version>
  	</dependency>
  	<dependency>
  		<groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
  		<artifactId>owasp-java-html-sanitizer</artifactId>
  		<version>20191001.1</version>
  	</dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) --> 
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
          <configuration>
               <release>9</release>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
          <configuration>
              <argLine>--add-modules java.xml.bind</argLine>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.1.2</version>
          <configuration>
              <outputDirectory>${output.dir}</outputDirectory>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>2.6</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version> 
        </plugin>
        <plugin>
        	<groupId>org.moditect</groupId>
    		<artifactId>moditect-maven-plugin</artifactId>
    		<version>1.0.0.Beta2</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <modules>
    <module>NightWeb-Core</module>
	<module>NightWeb-Forum</module>
  </modules>
</project>
